# log_hawk

./: Cargo.toml  logs.txt
.github/workflows/: ci.yml
src/: log_analyzer.rs  log_hawk_app.rs  main.rs  tab.rs
