[package]
name = "log_hawk"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1", features = ["derive"] }
rfd = "0.15.3"
regex = "1"
egui_plot = "0.31.0"
